@@ -3,6 +3,7 @@ CHANGELOG
 
 1.5.0-beta1
 * moved preRules and postRules into one single store (see getPreRules and getPostRules)
+* service-edit new action: replaceByMembersAndDelete
 
 ---------
 
